syntax = "proto3";

package humanoid_robot.PB.communication;

message UniversalRequest {
    int32 command = 1; // 命令码
    int32 version = 2; // 版本号
    int32 requestId = 3; // 请求ID
    int64 timeStamp = 4; // 请求时间戳
    int32 checksum = 5; // 校验和
    bytes payload = 6; // 序列化的请求消息
    int32 payloadType = 7; // 负载类型
    int32 payloadSize = 8; // 负载大小，单位为字节
}

message UniversalResponse {
    int32 status = 1; // 状态码
    int32 requestId = 2; // 请求ID
    int64 timeStamp = 3; // 响应时间戳
    int32 checksum = 4; // 校验和
    bytes payload = 5; // 序列化的响应消息
    int32 payloadType = 6; // 负载类型
    int32 payloadSize = 7; // 负载大小，单位为字节
}

service CommunicationService {
    // 获取感知结果
    rpc sendRequest(stream UniversalRequest) returns (stream UniversalResponse);
}